add character saving

--- a/Tests/WhimFights.Tests/WhimFights.Tests.csproj
+++ b/Tests/WhimFights.Tests/WhimFights.Tests.csproj
@@ -20,6 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Private\WhimFights.UseCases.Infrastructure\WhimFights.UseCases.Infrastructure.csproj" />
       <ProjectReference Include="..\..\Private\WhimFights.UseCases\WhimFights.UseCases.csproj" />
       <ProjectReference Include="..\..\Private\WhimFights\WhimFights.csproj" />
     </ItemGroup>
