--- a/Private/WhimFights.UseCases.Infrastructure/WhimFights.UseCases.Infrastructure.csproj
+++ b/Private/WhimFights.UseCases.Infrastructure/WhimFights.UseCases.Infrastructure.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\WhimFights.UseCases\WhimFights.UseCases.csproj" />
+    </ItemGroup>
+
 </Project>
