--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -14,10 +14,10 @@
     </PropertyGroup>
 
      <ItemGroup>
-        <PackageReference Include="Sorry.Analyzers" Version="1.0.0" PrivateAssets="all" />
-        <PackageReference Include="CSharpGuidelinesAnalyzer" Version="3.5.0" PrivateAssets="all" />
-        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.354" PrivateAssets="all" />
-        <PackageReference Include="SonarAnalyzer.CSharp" Version="8.17.0.26580" PrivateAssets="all" />
+        <PackageReference Include="Sorry.Analyzers" Version="*" PrivateAssets="all" />
+        <PackageReference Include="CSharpGuidelinesAnalyzer" Version="3.8.2 " />
+        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-*" PrivateAssets="all" />
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="8.44.0.52574" PrivateAssets="all" />
     </ItemGroup>
 
 </Project>
